[package]
name = "skydrop"
version = "0.1.0"
edition = "2021"

[dependencies]
local-ip-address = "0.6"
warp = "0.3"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
dirs = "5"
qrcode = "0.12"
image = "0.24"
bytes = "1.10.1"
